# pycircuit

./: README.md  pyproject.toml  tox.ini
pycircuit/: __init__.py  circuit.py  utils.py
pycircuit/components/: __init__.py  c.py  component.py  d.py  idc.py  mos.py  r.py  vdc.py
pycircuit/netlister/: __init__.py  net_factory.py
tests/: test_symbolic.py  test_tran.py
